<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laari.rider.views.activity.registration.PhoneAuthActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_arrow_back" />

    </LinearLayout>


    <TextView
        style="@style/PleaseEnterYourNu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/enter_mobile" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="48dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/add_your_phone"
        android:textColor="@color/colorBlack" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">


        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePic"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/input_back"
            android:gravity="center_vertical"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/colorBlack"
            app:ccp_defaultNameCode="US"
            app:ccp_textSize="16dp" />


        <EditText
            android:id="@+id/number_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/input_back"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:text="96669666936"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            android:windowSoftInputMode="stateVisible|adjustResize" />

    </LinearLayout>


    <Button
        android:id="@+id/firebase_auth_btn"
        style="@style/main_btn_yellow"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/next" />


</RelativeLayout>