<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.laari.rider.views.activity.EditProfileActivity">


    <include
        android:id="@+id/editToolbar"
        layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/editToolbar"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="24dp"
                android:src="@drawable/ic_boy" />

            <TextView
                style="@style/largeTvBold"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="16dp"
                android:text="Account Info" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">

                <TextView
                    style="@style/regulatTvBold"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/etEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="Najish Farooqui" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">

                <TextView
                    style="@style/regulatTvBold"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/etEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="najish.farooqui@gmail.com" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">

                <TextView
                    style="@style/regulatTvBold"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/etEditPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="9111978789" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">

                <TextView
                    style="@style/regulatTvBold"
                    android:text="National identity number" />

                <EditText
                    android:id="@+id/etEditNID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="1234567890123456" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">

                <TextView
                    style="@style/regulatTvBold"
                    android:text="@string/home_city" />

                <EditText
                    android:id="@+id/etEditHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="Mahidpur" />


            </LinearLayout>

            <Button
                style="@style/main_btn_yellow"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>