<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rentalSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <TextView
            style="@style/tvSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/date_and_time" />

        <TextView
            android:id="@+id/tvCeremonyDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/dec_17_10_20_am"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_down" />

    </RelativeLayout>


    <FrameLayout

        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tvVehicleType"
            style="@style/tvSpinner"

           />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/typeVehSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />

        <ImageView style="@style/spinnerArrow" />
    </FrameLayout>


    <FrameLayout

        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tvVehicleMake"
            style="@style/tvSpinner"
           />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/makeVehSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />

        <ImageView style="@style/spinnerArrow" />
    </FrameLayout>

    <FrameLayout

        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tvVehicleModel"
            style="@style/tvSpinner"
           />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/modelVehSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />

        <ImageView style="@style/spinnerArrow" />
    </FrameLayout>


    <FrameLayout

        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tvColor"
            style="@style/tvSpinner"
             />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/colorVehSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />

        <ImageView style="@style/spinnerArrow" />
    </FrameLayout>


    <RelativeLayout
        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            style="@style/tvSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="Return Date and Time" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_down" />

    </RelativeLayout>


    <RelativeLayout
        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            style="@style/tvSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="With Fuel" />


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            style="@style/tvSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="Decoration Required" />


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_down" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/spinner_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <TextView
            style="@style/tvSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/fare_approx" />

        <TextView
            android:id="@+id/tvFareApprox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/_1000rs"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_down" />


    </RelativeLayout>


    <Button
        style="@style/main_btn_yellow"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="continue" />

</LinearLayout>


